--- a/asteroid-game/index.html
+++ b/asteroid-game/index.html
@@ -15,6 +15,8 @@
     <script src="./constant/playerConfig.js"></script>
     <script src="./constant/enemyConfig.js"></script>
     <!-- helpers -->
+
+    <script src="./core/helpers/generateRandomHexColor.js"></script>
     <script src="./core/helpers/degRadConvert.js"></script>
     <script src="./core/helpers/ramdomInRange.js"></script>
     <!-- core classes -->
@@ -24,8 +26,10 @@
     <script src="./core/classes/renderer.js"></script>
     <!-- game objects -->
     <script src="./game-objects/gameObject.js"></script>
+    <script src="./game-objects/playerBullet.js"></script>
     <script src="./game-objects/player.js"></script>
     <script src="./game-objects/enemy.js"></script>
+    <script src="./game-objects/enemySummoner.js"></script>
     <script src="./core/classes/dynamicClasses.js"></script>
     <script src="index.js"></script>
 </body>
