--- a/google-ui/index.html
+++ b/google-ui/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/b57d63ef91.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <img class="logic" src="http://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png" alt="">
+    <img class="logo" src="http://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png" alt="">
     <div class="search-box">
         <i class="fas fa-search"></i>
         <input type="text" placeholder="Search Google or type a URL">
